[package]
name = "morpheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
env_logger = "0.9.0"
derive_more = "^0.99"
log = "0.4"
log4rs = "1.1.1"
rand = "0.8"

[dependencies.pyo3]
version = "0.16.5"
features = ["auto-initialize"]
